log
Thu 16 May 2024 08:05:01 PM UTC: 
 tests:  0|5
total_score: 0/70
f842709
Thu 16 May 2024 08:14:29 PM UTC: 
 sudoku.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
74233f5
Thu 16 May 2024 08:15:41 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
3da1dc1
Thu 16 May 2024 08:44:24 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
23cde51
Thu 16 May 2024 08:44:36 PM UTC: 
 sudoku.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  2|4
total_score: 15/70
6b04430
Thu 16 May 2024 08:55:39 PM UTC: 
 sudoku.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
24dd090
Thu 16 May 2024 08:56:48 PM UTC: 
 sudoku.c | 38 --------------------------------------
 1 file changed, 38 deletions(-)
 tests:  2|4
total_score: 15/70
2543d31
Thu 16 May 2024 09:13:21 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6a7dd79
Thu 16 May 2024 09:35:31 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|3
total_score: 35/70
ad1c028
Thu 16 May 2024 09:43:23 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  5|3
total_score: 35/70
90ebcc4
Thu 16 May 2024 09:45:55 PM UTC: 
 sudoku.c | 19 +++++++------------
 1 file changed, 7 insertions(+), 12 deletions(-)
 tests:  5|3
total_score: 35/70
edac469
Sat 18 May 2024 08:52:57 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|3
total_score: 35/70
3096ad6
Sat 18 May 2024 08:53:09 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
141ca9d
Sat 18 May 2024 08:59:59 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
e46db41
Sat 18 May 2024 09:00:27 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:131:16: error: void value not ignored as it ought to be
  131 |       Node* n= pop(S);
      |                ^~~
Compilation failed
3210949
Sat 18 May 2024 10:24:24 PM UTC: 
 sudoku.c | 23 ++++++++++-------------
 1 file changed, 10 insertions(+), 13 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:128:16: error: void value not ignored as it ought to be
  128 |       Node* n= pop(S);
      |                ^~~
Compilation failed
042f5c3
Sat 18 May 2024 10:36:58 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
4eea115
Sat 18 May 2024 10:59:11 PM UTC: 
 sudoku.c | 17 -----------------
 1 file changed, 17 deletions(-)
 tests:  6|2
total_score: 45/70
bcc57fd
